# icepeek

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: Makefile  create_sample_data.rs  docker-compose.yml
src/: app.rs  cli.rs  event.rs  main.rs
src/components/: column_selector.rs  data_view.rs  file_stats_panel.rs  filter_bar.rs  help_popup.rs  manifest_panel.rs  mod.rs  properties_panel.rs  schema_panel.rs  snapshot_panel.rs  status_bar.rs
src/loader/: arrow_convert.rs  catalog_loader.rs  direct_loader.rs  file_io.rs  mod.rs  scan.rs
src/model/: filter.rs  mod.rs  table_info.rs
src/ui/: layout.rs  mod.rs  theme.rs
