[package]
name = "icepeek"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "A terminal-based Apache Iceberg table viewer"
license = "MIT"
readme = "README.md"
keywords = ["iceberg", "tui", "parquet", "data-lake", "terminal"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/manfredcml/icepeek"
homepage = "https://github.com/manfredcml/icepeek"
exclude = ["examples/docker-compose.yml", "examples/Makefile"]

[[bin]]
name = "icepeek"
path = "src/main.rs"

[[example]]
name = "create_sample_data"
path = "examples/create_sample_data.rs"

[dependencies]
iceberg = { version = "0.8", features = ["storage-s3"] }
iceberg-catalog-rest = "0.8"

ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

# version must match iceberg's arrow dependency. iceberg 0.8 uses arrow 57
arrow-array = "57"
arrow-cast = "57"

clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
arrow-schema = "57"
parquet = "57"
